--- a/condition.html
+++ b/condition.html
@@ -29,19 +29,19 @@
 
         // Operateur logique pour condition plus complexe
 
-        // const age3 = 17
-        // const pays = 'US'git add
+        const age3 = 17
+        const pays = 'US'
 
-        // if (
-        //     (pays === 'FR' && age3 >= 18) ||
-        //     (pays === 'US' && age3 >= 16)
-        // ) {
-        //     console.log('Vous pouvez conduire')
-        // }
+        if (
+            (pays === 'FR' && age3 >= 18) ||
+            (pays === 'US' && age3 >= 16)
+        ) {
+            console.log('Vous pouvez conduire')
+        }
 
-        // On peux clarifier cette condition en :
+        // On peux clarifier cette condition en:
 
-        const age4 = 18
+        const age4 = 17
         const pays2 = 'FR'
         const peutConduireFrance = pays2 === 'FR' && age4 >= 18
         const peutConduireUS = pays2 === 'US' && age4 >= 16
@@ -50,6 +50,24 @@
             console.log('Vous avez le droit de conduire')
         } else {
             console.log('Vous n\'avez pas le droit de conduire')
+        }
+
+
+        // Autre moyen avec un switch case
+
+        const age5 = 17
+        const pays3 = 'FR'
+
+        switch (pays3) {
+            case 'FR':
+                console.log('Je suis en France')
+                break
+            case 'US':
+                console.log('Je suis aux Etats-Unis')
+                break
+            default:
+                console.log('Je suis dans un autre pays')
+                break
         }
 
 
