--- a/fonctionExo.html
+++ b/fonctionExo.html
@@ -113,6 +113,7 @@
         const phrase = `Vous savez, moi je ne crois pas qu’il y ait de bonne ou de mauvaise situation. Moi, si je devais résumer ma vie aujourd’hui avec vous, je dirais que c’est d’abord des rencontres. Des gens qui m’ont tendu la main, peut-être à un moment où je ne pouvais pas, où j’étais seul chez moi. Et c’est assez curieux de se dire que les hasards, les rencontres forgent une destinée... Parce que quand on a le goût de la chose, quand on a le goût de la chose bien faite, le beau geste, parfois on ne trouve pas l’interlocuteur en face je dirais, le miroir qui vous aide à avancer. Alors ça n’est pas mon cas, comme je disais là, puisque moi au contraire, j’ai pu ; et je dis merci à la vie, je lui dis merci, je chante la vie, je danse la vie... je ne suis qu’amour ! Et finalement, quand des gens me disent « Mais comment fais-tu pour avoir cette humanité ? », je leur réponds très simplement que c’est ce goût de l’amour, ce goût donc qui m’a poussé aujourd’hui à entreprendre une construction mécanique... mais demain qui sait ? Peut-être simplement à me mettre au service de la communauté, à faire le don, le don de soi. `
 
         const frequencies = {}
+        // const ignored = [',', '?', ':', '!', '«', ';']
         const words = phrase
             .toLowerCase()
             .replaceAll(',', '')
@@ -124,7 +125,7 @@
             .replaceAll('»', '')
             .split(' ')
         for (let word of words) {
-            if (word !== '') {
+            if (word !== '' && word.length >= 5) {
                 if (frequencies[word]) {
                     frequencies[word]++
                 } else {
@@ -133,7 +134,17 @@
             }
         }
 
-        console.log(frequencies)
+
+        const frequenciesArray = []
+        for (let k in frequencies) {
+            frequenciesArray.push({
+                word: k,
+                count: frequencies[k]
+            })
+        }
+
+        frequenciesArray.sort((a, b) => b.count - a.count)
+        console.log(`Les mots les plus fréquents sont ${frequenciesArray[0].word}, ${frequenciesArray[1].word} et ${frequenciesArray[2].word}`)
 
     </script>
 
